tests/esproposal_decorators.warn/esproposal_decorators.warn.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Experimental decorator usage. Decorators are an early stage proposal that may change. Additionally, Flow does not
account for the type implications of decorators at this time.

   3| @decorator4
      ^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:3

Experimental decorator usage. Decorators are an early stage proposal that may change. Additionally, Flow does not
account for the type implications of decorators at this time.

   5|   @decorator1
        ^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:8:3

Experimental decorator usage. Decorators are an early stage proposal that may change. Additionally, Flow does not
account for the type implications of decorators at this time.

        v----------
   8|   @decorator2
   9|   @decorator3
        ----------^



Found 3 errors
